--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile-Friendly Template</title>
+    <title>Pixiv generator</title>
     <style>
         /* Add your custom styles here */
         body {
@@ -89,7 +89,8 @@
                 'https://www.pixiv.net/en/artworks/110032715',
                 'https://www.pixiv.net/en/artworks/109748825',
                 'https://www.pixiv.net/en/artworks/97899127',
-                'https://www.pixiv.net/en/artworks/108814624'
+                'https://www.pixiv.net/en/artworks/108814624',
+                'https://www.pixiv.net/en/artworks/108444752#manga'
                 // Add more links as needed
             ];
 
